Add ability to publish client to PyPi
Version 1.0.0 also published.

--- a/clients/python/pyproject.toml
+++ b/clients/python/pyproject.toml
@@ -49,10 +49,8 @@ Changelog = "https://github.com/balancing-services/rest-api/blob/main/CHANGELOG.
 [tool.hatch.build.targets.wheel]
 packages = ["balancing_services"]
 
-[tool.hatch.build]
-include = [
-    "balancing_services/py.typed",
-]
+[tool.hatch.build.targets.sdist.force-include]
+"../../LICENSE" = "LICENSE"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
